test/fail/preprocess/redefinition/test.twge
#include "src1.twge"
#include "src2.twge"